Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.5.11.1: March 15th, 2010

* fix a major release bug; ebuild-env-utils.sh wasn't packaged in the
  released 0.5.11, this version adds the missing file.

* more declare related fixups; this one a regression from 0.5.10- in
  sourcing /etc/profile.env, it's contents weren't being preserved
  fully due to declare.

* add missing eapi3 phase support- basically just reuses eapi2's since
  the only changes are environmental.


pkgcore 0.5.11: March 14th, 2010

* took me a full night of debugging, but traced down yet another portage
  incompatibility introduced.  gentoo bug 303369; if you've been seeing
  issues where portage merged ebuild envs aren't reused in pkgcore, this
  is now fixed.  Env handling in general was heavily rewritten to be as
  robust as possible and protect against any further breakages from portage.

* env processing is a bit faster now- uses egrep where possible, falling
  back to bash regex where not.

* shell scripts now are tabs based rather than spaces.

* FEATURES=splitdebug works once again.

* It's strongly suggested that you run >snakeoil-0.3.6.1 due to fixes
  in extension building- specifically forcing -fno-strict-aliasing back
  into cflags since python is invalidly dropping them out.

  In addition, if you're running pkgcore on a py3k machine, installation
  now is parallelized for 2to3 conversion- should be a fair bit faster.

* rename support for env var CONFIG_ROOT to PORTAGE_CONFIGROOT; seems
  that changed in portage at some point.  This should fully restore
  crossdev support.


pkgcore 0.5.10: February 7th, 2010

* ticket 235; CBUILD/CTARGET values were being stomped w/ CHOST.

* EAPI=3 support; pkgcore already preserved mtimes at the second level,
  remaining bits were added for full EAPI3 support.

  Pkgcore doesn't currently fully PREFIX offset merges, but that will be